firefox-trunk (8.0~a1~hg20110714r72763+nobinonly-0ubuntu1) UNRELEASED; urgency=low

  [ Chris Coulson <chris.coulson@canonical.com> ]
  * New upstream snapshot v8.0 A1 HG 20110714R72763

  * Update globalmenu-extension to 1.9.2
    - Update for imgILoader changes in Firefox 8
    - Fix LP: #810489 - Inconsistent behaviour if extension is enabled
      after turning off the menubar, which will affect Lucid -> P upgrades
      once Lucid has a newer Firefox. document.loadOverlay() triggers a reload
      of localstore.rdf, which overwrites our changes to the UI to hide
      the Firefox button and bookmark button. Restore them when this happens
    - Fix LP: #800733 - Quick Filter Bar checkbox in Thunderbird menu is
      not marked as checked. On menuitems with command nodes, ensure we update
      the state on the correct node
    - Ensure we disconnect all signal handlers when a menu is destroyed.
      Should fix a SIGSEGV in uGlobalMenu::OnClose()
    - Drop Firefox 4 and 5 compatibility
    - Drop the uIGlobalMenuLoader interface, as it never served any purpose
    - Rework how we synchronize attributes to menuitems from their
      corresponding command nodes
    - Don't synchronize attributes from command nodes associated with menus
    - Rework how we handle document insertion/removals. Rather than keeping
      our dbusmenu structure in sync at all times, and routing the events
      to the correct node in the tree, we just mark the menu as invalid and
      rebuild it from scratch next time it opens. This should reduce problems
      like LP: #821391
    - Honour the collapsed attribute. This solves a problem with multiple
      seprators appearing adjacent to each other in the greasemonkey menu
    - Store all booleans as PRPackedBool rather than PRBool
    - Add error checking around uGlobalMenuDocListener
    - Make uGlobalMenuDummy more robust, and use it as a fallback if the
      real menuitem fails to initialize. This should help reduce problems