@@ -4,7 +4,7 @@
      xmlns:em="http://www.mozilla.org/2004/em-rdf#">
 	<Description about="urn:mozilla:install-manifest">
 		<em:id>globalmenu@ubuntu.com</em:id>
-		<em:version>1.9.2</em:version>
+		<em:version>2.0pre</em:version>
 		<em:unpack>true</em:unpack>
 
 		<em:targetApplication>
