@@ -3,8 +3,9 @@ firefox-trunk (8.0~a1~hg20110714r72763+nobinonly-0ubuntu1) UNRELEASED; urgency=l
   [ Chris Coulson <chris.coulson@canonical.com> ]
   * New upstream snapshot v8.0 A1 HG 20110714R72763
 
-  * Update globalmenu-extension to 1.9.2
+  * Update globalmenu-extension to 2.0 prerelease r222
     - Update for imgILoader changes in Firefox 8
+    - Update to use only the standard addEventListener, required by Firefox 8
     - Fix LP: #810489 - Inconsistent behaviour if extension is enabled
       after turning off the menubar, which will affect Lucid -> P upgrades
       once Lucid has a newer Firefox. document.loadOverlay() triggers a reload
@@ -194,7 +195,7 @@ firefox-trunk (8.0~a1~hg20110714r72763+nobinonly-0ubuntu1) UNRELEASED; urgency=l
   * Fix LP: #758111 - update ubuntulinux.org bookmark - thanks to Jonathan
     Rothwell for the patch
 
- -- Chris Coulson <chris.coulson@canonical.com>  Wed, 10 Aug 2011 20:05:13 +0100
+ -- Chris Coulson <chris.coulson@canonical.com>  Thu, 11 Aug 2011 13:06:16 +0100
 
 firefox-trunk (7.0~a1~hg20110704r72289+nobinonly-0ubuntu1) oneiric; urgency=low
 
